exports[`events actions shoould create an action to reset nearby events 1`] = `
Object {
  "type": "RESET_EVENTS_NEARBY",
}
`;

exports[`events actions should create an action to add a new event 1`] = `
Object {
  "event": Object {
    "UserId": 1,
    "color": "#a5dfd8",
    "createdAt": "2016-10-26T07:06:39.152Z",
    "dateEnd": "2016-12-06T02:03:56.063Z",
    "dateStart": "2016-05-23T17:38:11.010Z",
    "description": "Ut ut ipsam. Hic voluptas illo ex voluptatibus dolores aut sed beatae vel. Quo fuga cum animi est voluptatem. Animi numquam magni. Ut labore deleniti tenetur nulla magnam maxime enim. Molestiae omnis harum id sequi accusantium tempora. Tempore est dolorem nesciunt voluptatem quaerat qui dolorum non. Praesentium perferendis ut.",
    "id": 1,
    "title": "nihil voluptas rerum",
    "updatedAt": "2016-10-26T07:06:39.152Z",
  },
  "type": "ADD_EVENT_SUCCESS",
}
`;

exports[`events actions should create an action to fetch event's details 1`] = `
Object {
  "eventId": 1,
  "type": "FETCH_EVENT_DETAILS_REQUEST",
}
`;

exports[`events actions should create an action to fetch events 1`] = `
Object {
  "page": 1,
  "type": "FETCH_EVENTS_REQUEST",
}
`;

exports[`events actions should create an action to fetch nearby events 1`] = `
Object {
  "id": 1,
  "type": "FETCH_EVENTS_NEARBY",
}
`;

exports[`events actions should create an action to increase page 1`] = `
Object {
  "type": "INCREASE_PAGE",
}
`;

exports[`events actions should create an action to indicate an event creation error 1`] = `
Object {
  "error": [Error: Event creation error.],
  "type": "ADD_EVENT_FAILURE",
}
`;

exports[`events actions should create an action to indicate event fetching error 1`] = `
Object {
  "error": [Error: Error fetching error],
  "type": "FETCH_EVENTS_FAILURE",
}
`;

exports[`events actions should create an action to indicate event's details fetching error 1`] = `
Object {
  "error": [Error: Event details fetching failed.],
  "type": "FETCH_EVENT_DETAILS_FAILURE",
}
`;

exports[`events actions should create an action to pass event details 1`] = `
Object {
  "eventDetails": Object {
    "UserId": 1,
    "color": "#a5dfd8",
    "createdAt": "2016-10-26T07:06:39.152Z",
    "dateEnd": "2016-12-06T02:03:56.063Z",
    "dateStart": "2016-05-23T17:38:11.010Z",
    "description": "Ut ut ipsam. Hic voluptas illo ex voluptatibus dolores aut sed beatae vel. Quo fuga cum animi est voluptatem. Animi numquam magni. Ut labore deleniti tenetur nulla magnam maxime enim. Molestiae omnis harum id sequi accusantium tempora. Tempore est dolorem nesciunt voluptatem quaerat qui dolorum non. Praesentium perferendis ut.",
    "id": 1,
    "title": "nihil voluptas rerum",
    "updatedAt": "2016-10-26T07:06:39.152Z",
  },
  "type": "FETCH_EVENT_DETAILS_SUCCESS",
}
`;

exports[`events actions should create an action to request creation of a new event 1`] = `
Object {
  "event": Object {
    "UserId": 1,
    "color": "#a5dfd8",
    "createdAt": "2016-10-26T07:06:39.152Z",
    "dateEnd": "2016-12-06T02:03:56.063Z",
    "dateStart": "2016-05-23T17:38:11.010Z",
    "description": "Ut ut ipsam. Hic voluptas illo ex voluptatibus dolores aut sed beatae vel. Quo fuga cum animi est voluptatem. Animi numquam magni. Ut labore deleniti tenetur nulla magnam maxime enim. Molestiae omnis harum id sequi accusantium tempora. Tempore est dolorem nesciunt voluptatem quaerat qui dolorum non. Praesentium perferendis ut.",
    "id": 1,
    "title": "nihil voluptas rerum",
    "updatedAt": "2016-10-26T07:06:39.152Z",
  },
  "type": "ADD_EVENT",
}
`;

exports[`events actions should create an action to send fetched events 1`] = `
Object {
  "count": Array [
    Object {
      "UserId": 1,
      "color": "#a5dfd8",
      "createdAt": "2016-10-26T07:06:39.152Z",
      "dateEnd": "2016-12-06T02:03:56.063Z",
      "dateStart": "2016-05-23T17:38:11.010Z",
      "description": "Ut ut ipsam. Hic voluptas illo ex voluptatibus dolores aut sed beatae vel. Quo fuga cum animi est voluptatem. Animi numquam magni. Ut labore deleniti tenetur nulla magnam maxime enim. Molestiae omnis harum id sequi accusantium tempora. Tempore est dolorem nesciunt voluptatem quaerat qui dolorum non. Praesentium perferendis ut.",
      "id": 1,
      "title": "nihil voluptas rerum",
      "updatedAt": "2016-10-26T07:06:39.152Z",
    },
    Object {
      "UserId": 1,
      "color": "#33ed3f",
      "createdAt": "2016-10-26T07:06:40.243Z",
      "dateEnd": "2017-08-27T03:37:53.566Z",
      "dateStart": "2016-07-04T18:33:59.969Z",
      "description": "Sequi sit minima quae totam dolores suscipit. Vero exercitationem repellendus velit. Earum ullam unde explicabo earum. Corporis architecto ab quisquam consectetur. Odio odit aliquid ex sint consequatur similique. Aut et occaecati saepe rem cupiditate et veritatis aut. Similique molestias eveniet libero labore est laboriosam. Molestiae reiciendis error neque dignissimos.",
      "id": 2,
      "title": "voluptatem eos nostrum",
      "updatedAt": "2016-10-26T07:06:40.243Z",
    },
  ],
  "events": undefined,
  "type": "FETCH_EVENTS_SUCCESS",
}
`;

exports[`events actions should create an action to send nearby events 1`] = `
Object {
  "events": Array [
    Object {
      "PlaceId": 2178,
      "UserId": 1,
      "color": "#017778",
      "createdAt": "2016-12-15T13:17:52.972Z",
      "dateEnd": "2016-12-17T18:22:59.335Z",
      "dateStart": "2016-12-17T16:22:59.335Z",
      "deletedAt": null,
      "description": "Aut voluptatem dolor molestiae aspernatur voluptatem. Sit non et provident facilis ea nisi est quaerat numquam. Voluptatem debitis ducimus accusantium error repellat illo veniam. Voluptas ducimus et iste placeat magnam ad asperiores error atque. Unde voluptatem est reiciendis cumque et deserunt at. Dolor repellat vel et qui suscipit dolorem. Ea sequi tenetur sint ab omnis. Vitae consequatur impedit aperiam harum et necessitatibus aliquam. Dolores eaque sint voluptate saepe ducimus iure saepe. Voluptatem accusamus molestias iure blanditiis rerum dolores in harum. Id ut nesciunt consequuntur cum quia officiis. Rerum quibusdam vitae odit dolores architecto sunt minima nihil reiciendis. Aut laborum enim totam sed quo libero harum tempora. Perferendis est voluptatum aspernatur quisquam eum architecto amet corrupti. Atque nobis vel dolor. Voluptatem consequatur rerum dolor.",
      "distance": 0,
      "id": 2178,
      "image": "378b6f77-bbed-443b-8e3f-ad738fb98c8e.jpg",
      "title": "Dolores eveniet asperiores optio.",
      "updatedAt": "2016-12-15T13:17:52.972Z",
    },
    Object {
      "PlaceId": 2996,
      "UserId": 1,
      "color": "#4e625f",
      "createdAt": "2016-12-15T13:20:36.589Z",
      "dateEnd": "2016-12-26T07:36:56.574Z",
      "dateStart": "2016-12-26T05:36:56.574Z",
      "deletedAt": null,
      "description": "Officiis explicabo cum iure cumque minima impedit. Nesciunt expedita ipsum. Aliquid vero labore molestias. Voluptatum aut quod repellendus numquam veritatis aut nihil. Dolorem facilis eius sit laudantium quia sunt ratione praesentium voluptates. Ut qui eaque dolores expedita et. Error minus occaecati veniam illum. Voluptas porro ipsam facere odit. Molestias unde veritatis placeat. Ex consequatur a qui eum et id nihil ex. Facere aliquid veritatis est cupiditate qui. Ut impedit quasi. Et ipsa aliquam et rem quia commodi aspernatur fugit laudantium. Explicabo a doloribus. Distinctio repellendus dolor. Possimus cumque eligendi dolor alias.",
      "distance": 0,
      "id": 2996,
      "image": "b2407517-48e6-4d41-95cb-2779ee7fab17.jpg",
      "title": "Iure nemo qui omnis.",
      "updatedAt": "2016-12-15T13:20:36.589Z",
    },
  ],
  "type": "FETCH_EVENTS_NEARBY_SUCCESS",
}
`;
